syntax = "proto3";

package swipevibes;

option csharp_namespace = "SwipeVibesAPI.Grpc";

service InteractionService {
  rpc Log (LogRequest) returns (LogReply);
}

message LogRequest {
  string isrc = 1;
  string decision = 2; // like|dislike|skip|impression
  int64 deezer_track_id = 3;
  string source = 4;
  string preview_url = 5;
  string artist = 6;
  string title = 7;
  string album = 8;
  double bpm = 9;
  double gain = 10;
  int32 position = 11; // Position in recommendation queue (1-indexed)
}

message LogReply { bool ok = 1; string id = 2; }
